--- a/templates/cgpa.html
+++ b/templates/cgpa.html
@@ -17,7 +17,7 @@
 
         {% if y %}
                 <hr><br>
-            You have {{ y }} backlogs,better luck next time
+            You have {{ y }} backlog(s),better luck next time
         {% endif %}
     </form>
 </body>
