--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,15 @@
 <body>
 Under maintenance
 </form>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158724099-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-158724099-1');
+</script>
 
 </body>
 </html>
