--- a/templates/cgpa.html
+++ b/templates/cgpa.html
@@ -20,5 +20,15 @@
             You have {{ y }} backlog(s),better luck next time
         {% endif %}
     </form>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158724099-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-158724099-1');
+</script>
+
 </body>
 </html>
