--- a/templates/cgpa.html
+++ b/templates/cgpa.html
@@ -29,6 +29,6 @@
 
   gtag('config', 'UA-158724099-1');
 </script>
-
+<script data-ad-client="ca-pub-8044282405443558" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </body>
 </html>
