--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,6 @@ Under maintenance
 
   gtag('config', 'UA-158724099-1');
 </script>
-
+<script data-ad-client="ca-pub-8044282405443558" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </body>
 </html>
