--- a/templates/getlist.html
+++ b/templates/getlist.html
@@ -53,7 +53,7 @@
                                 <tbody>
                                 {% for x in tableData %}
                                     <tr>
-                                        {% for y in range(0,11) %}
+                                        {% for y in range(tableheadLen) %}
                                         <td>{{ x[y] }}</td>
                                         {% endfor %}
                                     </tr>
