--- a/templates/getlist.html
+++ b/templates/getlist.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Data Tables</title>
+    <title>JNTUH RESULT ANALYTICS</title>
       <link rel="stylesheet" href="{{ url_for('static', filename='assets/vendor/fonts/circular-std/style.css') }}">
 
       <link rel="stylesheet" href="{{ url_for('static', filename='assets/libs/css/style.css') }}">
