--- a/templates/home.html
+++ b/templates/home.html
@@ -28,6 +28,7 @@
                                             <label class="label">Select Result</label>
                                             <select class="input--style-1" type="text" name="result" id="input-end">
                                                 <option value="">Choose Exam</option>
+						<option value="1454.17">III Year I Semister Regular(R18)</option>
                                                 <option value="1437.17">II Year II Semister Regular(R18)</option>
                                                 <option value="1442.17">III Year II Semister Regular(R16)</option>
 						                        <option value="1404.17">I Year I Semister Regular(R18)</option>
